Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
   inputs:
     mavenPomFile: 'pom.xml'
     mavenDirectory: 'C:\Program Files\Maven'
-    mavenSetM2Home: 'C:\Program Files\Maven\apache-maven-3.9.2'
+    mavenSetM2Home: 'C:\Program Files\Maven\apache-maven-3.9.2\bin'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
