--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ steps:
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
+    mavenVersionOption: '3.9.2'
     mavenDirectory: 'C:\Program Files\Maven'
     mavenSetM2Home: 'C:\Program Files\Maven\apache-maven-3.9.2\bin'
     mavenOptions: '-Xmx3072m'
